--- a/css/about.css
+++ b/css/about.css
@@ -1,22 +1,163 @@
-#upper {
-  padding-right: 1rem;
-  padding-top: 1rem;
-  text-align: right;
-}
-
-body {
-  background: linear-gradient(to right, #00abc6, #d8016de5);
-}
-
-#detailsInputs {
+.navbar {
   text-align: center;
-  padding: 8px;
-  margin: auto;
+  justify-content: space-between;
 }
 
-#footer {
-  font-size: large;
+body,
+html {
+  text-align: center;
+  height: 100%;
+  background: linear-gradient(#00abc6, #d8016de5);
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  width: 100%;
+  height: 3rem;
+}
+
+h1 {
+  position: absolute;
+  float: left;
+  margin-top: 10px;
+  margin-left: 5px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-size: 2rem;
+}
+
+ul {
+  width: auto;
+  float: right;
+  margin-top: 8px;
+}
+
+li {
+  display: inline-block;
+  padding: 15px 30px;
+}
+
+a {
+  text-align: center;
+  color: #0b0000;
+  text-decoration: none;
+  font-family: "Open Sans", sans-serif;
+}
+
+a:hover {
+  color: #f0c330;
+  transition: 0.5s;
+}
+
+.cv {
+  text-align: left;
+  display: flex;
+  display: inline-block;
+  padding: 15px 30px;
+  font-family: "Open Sans", sans-serif;
+  text-indent: 20px;
+}
+
+.description {
+  padding-top: 2rem;
+  text-align: center;
+  width: 60%;
+  display: inline-block;
+  font-size: 19px;
+}
+
+h3 {
+  color: #0b0000;
+  font-family: sans-serif;
+}
+
+.aboutMain {
+  text-align: center;
+  display: inline-block;
+}
+
+span {
+  font-size: 1rem;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  text-align: center;
+}
+
+input {
+  text-align: left;
+  width: 100%;
+  padding: 1rem;
+  font-size: 1rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  margin: 0 10px;
+  background: rgb(211, 211, 211);
+  color: rgb(67, 67, 67);
+  font-size: 20px;
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
+}
 
+#sendEmail {
   text-align: center;
+}
+
+footer {
+  height: auto;
+  font-family: "Open Sans";
+  padding: 40px;
+  color: rgb(0, 0, 0);
+}
+
+.footer-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.footer-content p {
+  max-width: 500px;
+  margin: 10px auto;
+  line-height: 30px;
+  font-size: 15px;
+}
+.social {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  image-resolution: 1rem 0 3rem 0;
+}
+
+.social li {
+  margin: 0 10px;
+}
+
+.social a {
+  text-decoration: none;
+  color: #0b0000;
+}
+
+.social a i {
+  font-size: 1.1rem;
+  transition: 0.4s ease;
+}
+
+.footer-bottom {
+  width: 100vw;
+  padding: 20px 0;
+  text-align: center;
+}
+
+.footer-bottom p {
+  font-size: 14px;
+  word-spacing: 2px;
+  text-transform: capitalize;
+}
+
+.footer-bottom span {
+  text-transform: uppercase;
+  opacity: 0.4;
+  font-weight: 200;
 }
