--- a/css/index.css
+++ b/css/index.css
@@ -1,111 +1,180 @@
-#upper {
-  padding-right: 1rem;
-  padding-top: 1rem;
-  text-align: right;
+.navbar {
+  text-align: center;
+  justify-content: space-between;
 }
 
-body {
-  background: linear-gradient(to right, #00abc6, #d8016de5);
+body,
+html {
+  background: linear-gradient(#00abc6, #d8016de5);
+  margin: 0;
+  padding: 0;
 }
 
 header {
-  text-align: center;
-  padding: 2rem 1rem;
-  max-width: 80%;
   width: 100%;
-  margin: 0 auto;
-  font-size: 200%;
-  color: rgb(255, 255, 255);
-  margin-bottom: 1rem;
+  height: 3rem;
 }
 
-main {
-  flex: 1 1 0%;
-  padding: 2rem 1rem;
-  max-width: 90%;
-  width: 100%;
-  margin: auto;
-  text-align: center;
-}
-
-label {
-  font-family: "Gill Sans", "Gill Sans MT", Calibre, "Trebuchet MS", sans-serif;
-  font-size: 1.3rem;
-}
-
-#inputs {
-  text-align: center;
-  padding: 8px;
-  margin: auto;
-}
-
-#newTaskInput {
-  flex: 1 1 0%;
-  width: 30rem;
-  background-color: rgb(255, 255, 255);
-  padding: 1rem;
-  border-radius: 1.7rem;
-  margin-right: 1rem;
-  font-size: 1rem;
-}
-
-#newTaskDate {
-  padding: 0.35rem;
-  border-radius: 1rem;
-  font-size: 1rem;
-}
-
-#UrgencyTask {
-  padding: 0.3rem;
-  border-radius: 1rem;
-  margin-right: 1rem;
-  font-size: 1rem;
-}
-
-#newTaskSubmit {
-  font-size: 1rem;
-  cursor: pointer;
-  transition: 0.5s;
-  border-radius: 0.9rem;
-}
-
-hr {
-  margin: 5%;
-  width: 50% 50;
-  align-content: center;
-}
-
-h2 {
+h1 {
+  position: absolute;
+  float: left;
+  margin-top: 10px;
+  margin-left: 5px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   font-size: 2rem;
-  font-weight: 300;
-  color: rgb(255, 255, 255);
-  margin-bottom: 1rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibre, "Trebuchet MS", sans-serif;
-  font-weight: 450;
 }
 
-#myTable {
-  border: 1px solid;
-  background-color: rgb(255, 255, 255);
-  width: 70%;
-  height: auto;
-  border: 1px solid rgb(0, 0, 0);
-  margin: auto;
-  border-collapse: collapse;
+ul {
+  width: auto;
+  float: right;
+  margin-top: 8px;
 }
 
-#onClick {
-  font-size: 1rem;
-  cursor: pointer;
-  transition: 0.5s;
-  border-radius: 0.9rem;
-  font-weight: 700;
-  transition: 0.4s;
+li {
+  display: inline-block;
+  padding: 15px 30px;
 }
 
-#footer {
-  font-size: large;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-
+a {
   text-align: center;
+  color: #0b0000;
+  text-decoration: none;
+  font-family: "Open Sans", sans-serif;
+}
+
+a:hover {
+  color: #f0c330;
+  transition: 0.5s;
+}
+
+.container {
+  max-width: 800px;
+  margin: auto;
+  padding: 1rem;
+}
+
+.addTask {
+  width: 100%;
+  display: flex;
+  padding: 10px 0;
+}
+
+.addTask input {
+  width: 90%;
+  color: rgb(251, 255, 252);
+  border: none;
+  border-bottom: 2px solid rgb(255, 255, 255);
+  background: none;
+  padding: 1rem;
+  font-size: 2rem;
+  outline: none;
+}
+
+.addTask button {
+  margin: 0 10px;
+  background: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  padding: 1rem;
+  border: none;
+  outline: none;
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+.notCompleted,
+.Completed {
+  margin: 5px 0;
+  padding: 20px;
+}
+
+h3 {
+  font-size: 28px;
+  text-align: center;
+  color: rgb(0, 0, 0);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+ol li {
+  width: 90%;
+  list-style: none;
+  padding: 1rem;
+  border-radius: 15px;
+  list-style-type: none;
+  background: #ffffffbb;
+  font-size: 25px;
+}
+
+ol.Completed li {
+  background: #5dfe3d;
+}
+
+li button {
+  float: right;
+  font-size: 28px;
+  line-height: 28px;
+  margin-right: 15px;
+  background: none;
+  border: none;
+}
+
+footer {
+  height: auto;
+  font-family: "Open Sans";
+  padding: 40px;
+  color: rgb(0, 0, 0);
+}
+
+.footer-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.footer-content p {
+  max-width: 500px;
+  margin: 10px auto;
+  line-height: 30px;
+  font-size: 15px;
+}
+.social {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  image-resolution: 1rem 0 3rem 0;
+}
+
+.social li {
+  margin: 0 10px;
+}
+
+.social a {
+  text-decoration: none;
+  color: #0b0000;
+}
+
+.social a i {
+  font-size: 1.1rem;
+  transition: 0.4s ease;
+}
+
+.footer-bottom {
+  width: 100vw;
+  padding: 20px 0;
+  text-align: center;
+}
+
+.footer-bottom p {
+  font-size: 14px;
+  word-spacing: 2px;
+  text-transform: capitalize;
+}
+
+.footer-bottom span {
+  text-transform: uppercase;
+  opacity: 0.4;
+  font-weight: 200;
 }
